Windowsのスペルを修正

--- a/dialog/index.html
+++ b/dialog/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h2>WindosFormのメッセージボックスっぽいダイアログ</h2>
+    <h2>WindowsFormのメッセージボックスっぽいダイアログ</h2>
     <div class="content-frame">
       <label for="InfoTitle">タイトル：</label>
       <input type="text" id="InfoTitle" name="InfoTitle" minlength="4" maxlength="10" size="12" value="情報">
