Error.png → error.png

--- a/dialog/index.html
+++ b/dialog/index.html
@@ -94,7 +94,7 @@
       <div id="xxxErrorDialogTitle" class="xxxDialogTitle"></div>
       <div class="xxxDialogFrame">
         <div class="xxxDialogMsgArea">
-            <img src="./Error.png" width="30" height="30">
+            <img src="./error.png" width="30" height="30">
             <div id="xxxErrorDialogMsg" class="xxxDialogMsg"></div>
         </div>
       </div>
