--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   <body>
     <h2>開発ツール</h2>
     <div class="content-frame">
+      <a href="./convine-columns/index.html">Tableのセル結合</a>
+    </div>
+    <div class="content-frame">
       <a href="./dialog/index.html">Windows Form っぽいダイアログ</a>
     </div>
     <div class="content-frame">
-      <a href="./convine-columns/index.html">Tableのセル結合</a>
+      <a href="./TitleFixTable/">テーブルタイトル固定</a>
     </div>
   </body>
 </html>
