--- a/index.html
+++ b/index.html
@@ -2,20 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>開発ツール</title>
+    <title>開発メモ</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body>
-    <h2>開発ツール</h2>
+    <h2>開発メモ</h2>
     <div class="content-frame">
-      <a href="./convine-columns/index.html">Tableのセル結合</a>
+      <h4>開発ツール</h4>
+      <ul type="squre">
+        <li>
+          <a href="./convine-columns/index.html">Tableのセル結合</a>
+        </li>
+        <li>
+          <a href="./dialog/index.html">Windows Form っぽいダイアログ</a>
+        </li>
+      </ul>      
     </div>
+    
     <div class="content-frame">
-      <a href="./dialog/index.html">Windows Form っぽいダイアログ</a>
-    </div>
-    <div class="content-frame">
-      <a href="./TitleFixTable/">テーブルタイトル固定</a>
+      <h4>開発サンプル</h4>
+      <ul type="squre">
+        <li>
+          <a href="./TitleFixTable/">テーブルタイトル固定</a>
+        </li>
+      </ul>      
     </div>
   </body>
 </html>
