全体的にブラッシュアップ

--- a/TitleFixTable/index.html
+++ b/TitleFixTable/index.html
@@ -8,6 +8,7 @@
 <body>
     <div class="content-frame">
         <h3>テーブルタイトル固定</h3>
+        <h4>実装方法</h4>
         <ul>
             <li>テーブルを囲むDivタグを作成し、高さを指定。</li>
             <li>Divタグに「overflow-y: scroll」を指定。</li>
