--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li>
           <a href="./TitleFixTable/">テーブルタイトル固定</a>
         </li>
+        <li>
+          <a href="./VoiceRecognition/">音声認識</a>
+        </li>
       </ul>      
     </div>
   </body>
