--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <li>
           <a href="./VoiceRecognition/">音声認識</a>
         </li>
+        <li>
+          <a href="./SearchDialog/">検索ダイアログ</a>
+        </li>
       </ul>      
     </div>
   </body>
