--- a/dialog/index.html
+++ b/dialog/index.html
@@ -28,7 +28,7 @@
       <input type="text" id="InfoTitle" name="InfoTitle" minlength="4" maxlength="10" size="12" value="情報">
       <label for="InfoTitle" class="input-lp">内容：</label>
       <input type="text" id="InfoContents" name="InfoContents" minlength="4" maxlength="24"  size="52" value="モソブラソが冷蔵庫にあります。">
-      <button id="ShowInfoButton">情報ダイアログを表示</button>
+      <button id="ShowInfoButton" class="nomal-button">情報ダイアログを表示</button>
       <div id="InfoRes" class="msg-frame"></div>
     </div>
 
@@ -37,7 +37,7 @@
       <input type="text" id="QuestionTitle" name="QuestionTitle" minlength="4" maxlength="10" size="12" value="確認">
       <label for="QuestionTitle" class="input-lp">内容：</label>
       <input type="text" id="QuestionContents" name="QuestionContents" minlength="4" maxlength="24" size="52" value="モソブラソを食べます。<br/>よろしいですか？">
-      <button id="ShowYesNoButton">確認ダイアログを表示</button>
+      <button id="ShowYesNoButton" class="nomal-button">確認ダイアログを表示</button>
       <div id="QuestionRes" class="msg-frame"></div>
     </div>
 
@@ -46,7 +46,7 @@
       <input type="text" id="CautionTitle" name="CautionTitle" minlength="4" maxlength="10" size="12" value="注意（警告）">
       <label for="CautionTitle" class="input-lp">内容：</label>
       <input type="text" id="CautionContents" name="CautionContents" minlength="4" maxlength="24"  size="52" value="モソブラソは、１日１個までです。">
-      <button id="ShowCautionButton">注意（警告）ダイアログを表示</button>
+      <button id="ShowCautionButton" class="nomal-button">注意（警告）ダイアログを表示</button>
       <div id="CautionRes" class="msg-frame"></div>
     </div>
 
@@ -55,7 +55,7 @@
       <input type="text" id="ErrorTitle" name="ErrorTitle" minlength="4" maxlength="10" size="12" value="システムエラー">
       <label for="ErrorTitle" class="input-lp">内容：</label>
       <input type="text" id="ErrorContents" name="ErrorContents" minlength="4" maxlength="24"  size="52" value="モソブラソが腐っています。<br/>購入元に連絡してください。">
-      <button id="ShowErrorButton">システムエラーダイアログを表示</button>
+      <button id="ShowErrorButton" class="nomal-button">システムエラーダイアログを表示</button>
       <div id="ErrorRes" class="msg-frame"></div>
     </div>
     <div class="content-frame">
