--- a/VoiceRecognition/index.html
+++ b/VoiceRecognition/index.html
@@ -1,9 +1,10 @@
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <title>音声認識</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="./VoiceRecognition.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>音声認識</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./VoiceRecognition.css">
 </head>
 <body>
     <div class="content-frame">
